--- a/requirements.txt
+++ b/requirements.txt
@@ -30,5 +30,9 @@ sqlparse==0.5.0
 stack-data==0.6.3
 tornado==6.4
 traitlets==5.14.3
-typing_extensions==4.12.0
+typing_extensions==4.15.0
 wcwidth==0.2.13
+cffi==2.0.0
+cryptography==46.0.3
+fido2==2.0.0
+pycparser==2.23
