--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,18 @@
 ## Copy to `.env` and fill secrets (never commit `.env`)
 
+# Django (production)
+DJANGO_SECRET_KEY=CHANGE_ME
+DJANGO_DEBUG=1
+DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
+
 # Email (Resend SMTP)
 DJANGO_EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
-EMAIL_HOST=smtp.gmail.com
+EMAIL_HOST=smtp.resend.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=1
 EMAIL_USE_SSL=0
-EMAIL_HOST_USER=gmailuser@gmail.com
-EMAIL_HOST_PASSWORD=gmailpassword
+EMAIL_HOST_USER=resend
+EMAIL_HOST_PASSWORD=YOUR_RESEND_API_KEY
 DEFAULT_FROM_EMAIL=do-not-reply@divyeshvishwakarma.com
 
 # DShare
@@ -24,3 +29,9 @@ DSHARE_PUBLIC_TTL_SECONDS=86400
 DSHARE_PUBLIC_MAX_UPLOAD_BYTES=10485760
 DSHARE_PUBLIC_UPLOAD_LIMIT=100
 DSHARE_PUBLIC_CLEAR_LIMIT=100
+
+# Admin bootstrap (optional)
+# On `python manage.py migrate`, DShare will create this superuser if missing.
+DSHARE_SUPERADMIN_USERNAME=admin
+DSHARE_SUPERADMIN_PASSWORD=CHANGE_ME
+DSHARE_SUPERADMIN_EMAIL=admin@example.com
