--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,19 @@ EMAIL_HOST_USER=resend
 EMAIL_HOST_PASSWORD=YOUR_RESEND_API_KEY
 DEFAULT_FROM_EMAIL=do-not-reply@divyeshvishwakarma.com
 
+# NOTE (PythonAnywhere free accounts):
+# - Arbitrary SMTP (like Resend) is blocked, so the settings above will fail.
+# - Use Gmail SMTP (allowed) or an HTTP-based email service (SendGrid/Mailgun), or upgrade.
+#
+# Gmail SMTP (requires 2-step verification + an App Password; do NOT use your normal Gmail password)
+# EMAIL_HOST=smtp.gmail.com
+# EMAIL_PORT=587
+# EMAIL_USE_TLS=1
+# EMAIL_USE_SSL=0
+# EMAIL_HOST_USER=youraddress@gmail.com
+# EMAIL_HOST_PASSWORD=YOUR_GMAIL_APP_PASSWORD
+# DEFAULT_FROM_EMAIL=youraddress@gmail.com
+
 # DShare
 # Set this to your production domain for passkeys (WebAuthn).
 DSHARE_RP_ID=divyeshvishwakarma.com
