--- a/requirements.txt
+++ b/requirements.txt
@@ -36,3 +36,9 @@ cffi==2.0.0
 cryptography==46.0.3
 fido2==2.0.0
 pycparser==2.23
+django-storages[s3]==1.14.2
+boto3==1.34.131
+dj-database-url==2.2.0
+psycopg2-binary==2.9.9
+whitenoise==6.7.0
+gunicorn==22.0.0
