--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,13 @@ EMAIL_HOST_USER=resend
 EMAIL_HOST_PASSWORD=YOUR_RESEND_API_KEY
 DEFAULT_FROM_EMAIL=do-not-reply@divyeshvishwakarma.com
 
+# Optional: use Resend HTTP API if SMTP is blocked
+# DSHARE_EMAIL_PROVIDER=resend
+# RESEND_API_KEY=YOUR_RESEND_API_KEY
+
+# Optional: allow /api/debug/email/ in production
+# DSHARE_ADMIN_TOKEN=CHANGE_ME
+
 # NOTE (PythonAnywhere free accounts):
 # - Arbitrary SMTP (like Resend) is blocked, so the settings above will fail.
 # - Use Gmail SMTP (allowed) or an HTTP-based email service (SendGrid/Mailgun), or upgrade.
