--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -37,10 +37,12 @@ dependencies:
   file_picker: ^8.1.2
   path: ^1.9.0
   path_provider: ^2.1.4
+  receive_sharing_intent: ^1.8.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -58,6 +60,20 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/dshare_icon.png
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/dshare_icon.png"
+  adaptive_icon_background: "#000000"
+  adaptive_icon_foreground: "assets/dshare_icon.png"
+  remove_alpha_ios: true
+  windows:
+    generate: true
+    image_path: "assets/dshare_icon.png"
 
   # To add assets to your application, add an assets section, like this:
   # assets:
