--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -43,6 +43,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
+  msix: ^3.16.7
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -74,6 +75,16 @@ flutter_launcher_icons:
   windows:
     generate: true
     image_path: "assets/dshare_icon.png"
+
+msix_config:
+  display_name: DShare
+  publisher_display_name: CHANGE_ME
+  identity_name: CHANGE_ME
+  publisher: "CN=CHANGE_ME"
+  msix_version: 1.0.0.0
+  logo_path: assets/dshare_icon.png
+  capabilities: "internetClient"
+  store: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
