--- a/flutter_app/windows/runner/Runner.rc
+++ b/flutter_app/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "flutter_app" "\0"
+            VALUE "CompanyName", "DShare" "\0"
+            VALUE "FileDescription", "DShare" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "flutter_app" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2026 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "flutter_app.exe" "\0"
-            VALUE "ProductName", "flutter_app" "\0"
+            VALUE "InternalName", "DShare" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2026 DShare. All rights reserved." "\0"
+            VALUE "OriginalFilename", "DShare.exe" "\0"
+            VALUE "ProductName", "DShare" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
