--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.1+2
 
 environment:
   sdk: ^3.9.2
@@ -35,9 +35,11 @@ dependencies:
   dio: ^5.7.0
   dio_cookie_manager: ^3.1.1
   file_picker: ^8.1.2
+  flutter_local_notifications: ^17.1.2
   path: ^1.9.0
   path_provider: ^2.1.4
   receive_sharing_intent: ^1.8.1
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
@@ -64,25 +66,26 @@ flutter:
 
   assets:
     - assets/dshare_icon.png
+    - assets/dshare_logo_text.png
 
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/dshare_icon.png"
+  image_path: "assets/dshare_app_icon.png"
   adaptive_icon_background: "#000000"
   adaptive_icon_foreground: "assets/dshare_icon.png"
   remove_alpha_ios: true
   windows:
     generate: true
-    image_path: "assets/dshare_icon.png"
+    image_path: "assets/dshare_app_icon.png"
 
 msix_config:
   display_name: DShare
   publisher_display_name: CHANGE_ME
   identity_name: CHANGE_ME
   publisher: "CN=CHANGE_ME"
-  msix_version: 1.0.0.0
-  logo_path: assets/dshare_icon.png
+  msix_version: 1.0.1.0
+  logo_path: assets/dshare_app_icon.png
   capabilities: "internetClient"
   store: true
 
